[gd_scene format=3 uid="uid://nph6tmxacy6x"]

[ext_resource type="Script" uid="uid://dvg4ydtm08gnh" path="res://game/controller/interaction_mode/default_mode.gd" id="1_h2f7u"]
[ext_resource type="PackedScene" uid="uid://cjxjskdp1viq7" path="res://game/ui/politics/political_track_view.tscn" id="2_wqc1e"]
[ext_resource type="PackedScene" uid="uid://l1ap1jwj6kcr" path="res://game/ui/region/region_details_view.tscn" id="3_aukl3"]

[node name="DefaultMode" type="Node" unique_id=1688034644]
script = ExtResource("1_h2f7u")
metadata/_custom_type_script = "uid://dvg4ydtm08gnh"

[node name="HUD" type="CanvasLayer" parent="." unique_id=593075762]

[node name="PoliticalTrackView" parent="HUD" unique_id=194239977 instance=ExtResource("2_wqc1e")]

[node name="RegionDetailsView" parent="HUD" unique_id=820143251 instance=ExtResource("3_aukl3")]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -840.0
offset_bottom = 0.0
grow_vertical = 0
